# Pandemic-Reign-of-Cthulhu

./: README.md
.github/workflows/: backend_ci.yml  frontend_ci.yaml  frontend_ci.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  constant.py  dto.py
backend/app/adapter/: api.py  event_emitter.py  presenter.py  sio_srv.py
backend/app/adapter/repository/: __init__.py  in_mem.py
backend/app/domain/: __init__.py  game.py  player.py
backend/app/dto/: __init__.py  rtc.fbs
backend/app/dto/rtc/: CharacterSelection.py  Difficulty.py  DifficultyConfig.py  GameStart.py  Investigator.py
backend/app/usecase/: __init__.py  config_game.py  create_game.py
backend/tests/e2e/: game.py  test_game.py  test_socketio.py
backend/tests/unit/: test_in_mem_repo.py  test_investigator.py  test_player.py
backend/tests/unit/usecase/: test_game.py
doc/api/: swagger.yaml
frontend/: .eslintrc.json  .prettierrc  README.md  eslintrc.bak  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/card-picking/: page.tsx
frontend/app/design/: page.tsx
frontend/app/game/: layout.tsx  page.tsx
frontend/app/level-select/: page.tsx
frontend/app/level-setup/: page.tsx
frontend/assets/investigator/insane/: index.ts
frontend/assets/investigator/sane/: index.ts
frontend/components/: background.tsx
frontend/components/investigator-card/: constants.ts  index.tsx
frontend/components/investigator-card2/: index.tsx
frontend/components/map/: draw-map.ts  index.tsx  map.interface.ts
frontend/components/map/constants/: index.ts  map-data.ts  nodes.ts  styling.ts
frontend/components/nav/: top-nav.tsx
frontend/components/ui/: button.tsx
frontend/config/: investigators.ts  levels.ts
frontend/shared/atoms/: game-status.ts
frontend/shared/constants/: index.ts
frontend/shared/type/: type.d.ts
